--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,7 @@
             <ul id="predictionsList" class="list-group">
               <li class="list-group-item">Prediction results will appear here.</li>
             </ul>
+            <div id="results"></div>
           </div>
         </div>
       </div>
